Closed Bug 256006 Opened 21 years ago Closed 21 years ago

XUL Frames compute MEW when it is not necessary

Categories

(Core :: Layout, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bernd_mozilla, Unassigned)

Details

Attachments

(1 file)

The BoxLayoutState takes the address of aDesiredSize.mMaxElementWidth as it worked previously with the MES. After this the non nullness is used as a criteria whether the MEW should be computed or not (http://lxr.mozilla.org/seamonkey/search?string=state.GetMaxElementWidth%28%29 ). This is pretty old style and now that we have the mComputeMEW flag mMaxElementWidth is a member variable and its address is always non null.
Attached patch patchSplinter Review
Comment on attachment 156440 [details] [diff] [review] patch David, did you leave that code intentional when you switched from size to width?
Attachment #156440 - Flags: superreview?(dbaron)
Attachment #156440 - Flags: review?(dbaron)
Attachment #156440 - Flags: superreview?(dbaron)
Attachment #156440 - Flags: superreview+
Attachment #156440 - Flags: review?(dbaron)
Attachment #156440 - Flags: review+
this thing has been checked in on august 27th
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: