xul frames should compute MEW only when they are really requested to do so, bug 256006 r/sr=dbaron